<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.models.ShoeViewModel" />
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DetailsFragment">

        <TextView
            android:id="@+id/shoe_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_edittext"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edittext" />

        <EditText
            android:id="@+id/shoe_name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.shoe.name}"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/company_name_edittext"
            app:layout_constraintEnd_toEndOf="@+id/company_name_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/company_name_edittext" />

        <EditText
            android:id="@+id/company_name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.shoe.name}"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edittext"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/shoe_size_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_edittext"
            app:layout_constraintEnd_toEndOf="@+id/shoe_size_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edittext" />

        <EditText
            android:id="@+id/shoe_size_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/size"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@{Double.toString(shoeViewModel.shoe.size)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_edittext"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />


        <TextView
            android:id="@+id/shoe_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/description_edittext"
            app:layout_constraintEnd_toEndOf="@+id/description_edittext"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="@+id/description_edittext" />


        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.shoe.description}"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name_edittext"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edittext"
            app:layout_constraintVertical_bias="0.109" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.335"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edittext"
            app:layout_constraintVertical_bias="0.109" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>