<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragmentLoginFragment">

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/email_text"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_edittext"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textView"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_edittext"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_textview"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="211dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/register_button"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/password_edittext"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="212dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
